--- a/CONTACTO/contacto.html
+++ b/CONTACTO/contacto.html
@@ -7,7 +7,7 @@ APELLIDOS:DUARTE
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="/CSS/contacto.css" />
+	<link rel="stylesheet" href="../CSS/contacto.css" />
 	<title>formulario de contacto</title>
 </head>
 
