--- a/RECETA/index.html
+++ b/RECETA/index.html
@@ -9,7 +9,7 @@ APELLIDOS:DUARTE
 <head>
 	<meta charset="utf-8" />
     <link rel="icon" type="image/png" href="/MULTIMEDIA/IMAGENES/Logo-Delicias.png">
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="../CSS/style.css" />
 	<title>Delicias Kitchen</title>
 </head>
 
