--- a/CONTACTO/contacto.html
+++ b/CONTACTO/contacto.html
@@ -14,14 +14,14 @@ APELLIDOS:DUARTE
 <body>
     <header>
         <div class="logotipo">
-            <img src="/MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
+            <img src="../MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
         </div>       
 		<nav>
 			<ul>
-			<li><a href="/RECETA/index.html"> Inicio </a></li>
-			<li><a href="/RECETA/receta.html"> Recetas </a></li>
-			<li><a href="/CONTACTO/contacto.html">	Contacto </a></li>
-			<li><a href="/LISTADO/listado.html"> Otras cosas </a></li>
+			<li><a href="../index.html"> Inicio </a></li>
+			<li><a href="../RECETA/receta.html"> Recetas </a></li>
+			<li><a href="../CONTACTO/contacto.html">	Contacto </a></li>
+			<li><a href="../LISTADO/listado.html"> Otras cosas </a></li>
 		
 			</ul>
 		</nav>
