--- a/RECETA/receta.html
+++ b/RECETA/receta.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <div class="logotipo">
-            <img src="/MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
+            <img src="../MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
         </div>       
 		<nav>
 			<ul>
-			<li><a href="/RECETA/index.html"> Inicio </a></li>
-			<li><a href="/RECETA/receta.html"> Recetas </a></li>
-			<li><a href="/CONTACTO/contacto.html">	Contacto </a></li>
-			<li><a href="/LISTADO/listado.html"> Otras cosas </a></li>
+			<li><a href="../index.html"> Inicio </a></li>
+			<li><a href="../RECETA/receta.html"> Recetas </a></li>
+			<li><a href="../CONTACTO/contacto.html">	Contacto </a></li>
+			<li><a href="../LISTADO/listado.html"> Otras cosas </a></li>
 		
 			</ul>
 		</nav>
@@ -69,16 +69,16 @@
                     <h3>Para hacer la masa de las empanadas argentinas:</h3><br>
                     <p>Ponemos la harina en un cuenco y en el centro la manteca fundida, la sal  y la yema. Vamos añadiendo de a poco el agua tibia y mezclando hasta que la masa se pueda coger con las manos sin que se pegue. Amasamos sobre la mesa hasta que la masa esté elástica y dejamos descansar en la nevera 30 minutos. Estiramos a un espesor fino. Cortamos discos de unos 12 cm. de diámetro.</p><br>
                     <p class="tempo">Tiempo de realizacion: 120min</p><br>
-                    <img src="/MULTIMEDIA/IMAGENES/imagenes receta/masa empanada.jpeg" alt="">
+                    <img src="../MULTIMEDIA/IMAGENES/imagenes receta/masa empanada.jpeg" alt="">
                     <h3>Para hacer el relleno de las empanadas argentinas:</h3><br>
                     <p>Rehogar la cebolla en un poco de aceite hasta que este tierna. Agregar la carne y mezclar hasta que se blanquee. Sazonar con el pimentón, comino, sal, y pimienta. Añadir el caldo, volver a mezclar y retirar. <br>
                         Agregar las pasas y las aceitunas y poner en el frigorífico durante 1 ó 2 horas. En el momento de preparar las empanadas añadir a cada una un trozo de huevo cocido.</p><br>
                         <p class="tempo">Tiempo de realizacion: 60 luego dejar reposar durate 1 o 2 horas</p><br>
-                        <img src="/MULTIMEDIA/IMAGENES/imagenes receta/RELLENO.JPEG" alt="">
+                        <img src="../MULTIMEDIA/IMAGENES/imagenes receta/RELLENO.JPEG" alt="">
                         <h3>Montar las empanadas argentinas de carne:</h3><br>
                         <p>Poner sobre un disco de masa, un poco de relleno. Humedecer con agua los bordes de la masa y plegar la masa para unir por los bordes. Freír hasta que tomen color o bien ponerlas al horno a 200°C calor arriba y abajo, pintándolas previamente con huevo batido, hasta que estén bien doradas.</p><br>
                         <p class="tempo">Tiempo de realicacion: 30 min</p><br>
-                        <img src="/MULTIMEDIA/IMAGENES/imagenes receta/empanada.JPEG" alt="">
+                        <img src="../MULTIMEDIA/IMAGENES/imagenes receta/empanada.JPEG" alt="">
 
                         <p>aqui teneis un video para los que no son de leer :)</p><br><br>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/jl366TPHIog" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
