--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ APELLIDOS:DUARTE
 
 <head>
 	<meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/MULTIMEDIA/IMAGENES/Logo-Delicias.png">
+    <link rel="icon" type="image/png" href="../MULTIMEDIA/IMAGENES/Logo-Delicias.png">
 	<link rel="stylesheet" href="../CSS/style.css" />
 	<title>Delicias Kitchen</title>
 </head>
@@ -16,14 +16,14 @@ APELLIDOS:DUARTE
 <body>
 	<header>
         <div class="logotipo">
-            <img src="/MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
+            <img src="../MULTIMEDIA/IMAGENES/Logo-Delicias.png" alt="">
         </div>       
 		<nav>
 			<ul>
-			<li><a href="/RECETA/index.html"> Inicio </a></li>
-			<li><a href="/RECETA/receta.html"> Recetas </a></li>
-			<li><a href="/CONTACTO/contacto.html">	Contacto </a></li>
-			<li><a href=""> Otras cosas </a></li>
+			<li><a href="../index.html"> Inicio </a></li>
+			<li><a href="../RECETA/receta.html"> Recetas </a></li>
+			<li><a href="../CONTACTO/contacto.html">	Contacto </a></li>
+			<li><a href="../LISTADO/listado.html"> Otras cosas </a></li>
 		
 			</ul>
 		</nav>
@@ -32,18 +32,18 @@ APELLIDOS:DUARTE
 
 		<section>
 			<article class="larticulo">
-                <img src="/MULTIMEDIA/IMAGENES/Pasta.jpg" alt="">
+                <img src="../MULTIMEDIA/IMAGENES/Pasta.jpg" alt="">
 				<h3>
-                    <p><a href="/RECETA/receta.html"> Pasta con salsa de coliflor y pimienta de Jamaica</a></p>
+                    <p><a href="../RECETA/receta.html"> Pasta con salsa de coliflor y pimienta de Jamaica</a></p>
                 </h3>
 			<p class="fecha">13 de marzo 2019</p>
 				<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con
 					otros ingredientes vegetales, que la convierten en…</p>
 			</article>
 			<article class="larticulo">
-                <img src="/MULTIMEDIA/IMAGENES/galletas.jpg" alt="">
+                <img src="../MULTIMEDIA/IMAGENES/galletas.jpg" alt="">
 				<h3>
-                    <p><a href="/RECETA/receta.html">Galletas de avena, rosa y lima</a></p>
+                    <p><a href="../RECETA/receta.html">Galletas de avena, rosa y lima</a></p>
                 </h3>
                 <p class="fecha">12 febrero, 2019</p>
                 <p>Galletitas para San Valentín? Estas galletas ricas y crujientes, elaboradas con avena y con un rico sabor a rosa y
@@ -51,9 +51,9 @@ APELLIDOS:DUARTE
 				</p>
 			</article>
 			<article class="rarticulo">
-                <img src="/MULTIMEDIA/IMAGENES/mijo.jpg" alt="">
+                <img src="../MULTIMEDIA/IMAGENES/mijo.jpg" alt="">
                 <h3>
-                    <p><a href="/RECETA/receta.html">Mijo cremoso con lentejas, hortalizas y shiitake</a></p>
+                    <p><a href="../RECETA/receta.html">Mijo cremoso con lentejas, hortalizas y shiitake</a></p>
                 </h3>
                 <p class="fecha">1 febrero, 2019</p>
 				<p>Un buen plato de mijo cremoso con lentejas y hortalizas es todo lo que necesitas para templar el cuerpo este
@@ -61,9 +61,9 @@ APELLIDOS:DUARTE
 				</p>
 			</article>
 			<article class="rarticulo">
-                <img src="/MULTIMEDIA/IMAGENES/calabacines.jpg" alt="">
+                <img src="../MULTIMEDIA/IMAGENES/calabacines.jpg" alt="">
                 <h3>
-                    <p><a href="/RECETA/receta.html">Calabacines rellenos de arroz negro y calabaza</a></p>
+                    <p><a href="../RECETA/receta.html">Calabacines rellenos de arroz negro y calabaza</a></p>
                 </h3>
                 <p class="fecha">18 diciembre, 2018</p>
 				<p>Estos calabacines rellenos de arroz negro y calabaza que te propongo hoy, son la última receta que publico en el
@@ -76,14 +76,14 @@ APELLIDOS:DUARTE
 	<div class="blogger">
 		<h4> Sobre mi</h4>
        
-		<img src="/MULTIMEDIA/IMAGENES/isagil.png" class="img-blogger">
+		<img src="../MULTIMEDIA/IMAGENES/isagil.png" class="img-blogger">
 	<p>Hola, bienvenid@ a mi blog, un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas...
 		</p>
 
 	</div>
 	<div class="libro">
         <p><strong>Suscríbete a mi blog</strong></p>   
-		<img src="/MULTIMEDIA/IMAGENES/libro.png" class="img-libro">
+		<img src="../MULTIMEDIA/IMAGENES/libro.png" class="img-libro">
 
 		<p>Y consigue GRATIS mi eBook con 10 recetas exclusivas con superalimentos.
 			</p>
